# haskell_playground

./: .gitignore  README.md  cabal.project  hie.yaml  htc.cabal
app/: Main.hs  hr_time.h  lib.c
src/: BasicDatatypes.hs  Functions.hs  LetWhere.hs
test/: BasicDatatypesSpec.hs  DifferentExercisesSpec.hs  DollarSignSpec.hs  DoubleSpec.hs  LetWhereSpec.hs  PluralizeSpec.hs  TexturesEqualSpec.hs
test2/: PrimesSpec.hs
