cabal-version: 2.4

name:           htc
version:        0.0.0
author:         Łukasz Hen <put@email.here>
maintainer:     Łukasz Hen <put@email.here>
copyright:      (c) 2022 Łukasz Hen
license:        MIT
license-file:   LICENSE
build-type:     Simple

library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base ==4.*, sdl2, sdl2-gfx
  exposed-modules:
      Data.String.Strip,
      LetWhere,
      BasicDatatypes,
      Functions
  other-modules:
      Paths_htc
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base ==4.*
    , hspec ==2.*
    , htc
    , gloss
    , sdl2
    , sdl2-gfx
    , vector
    , storable-tuple
  other-modules:
      Data.String.StripSpec,
      DoubleSpec,
      PluralizeSpec,
      DifferentExercisesSpec,
      BasicDatatypesSpec,
      LetWhereSpec,
      DollarSignSpec,
      TexturesEqualSpec,
      Paths_htc
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*

test-suite spec2
  type: exitcode-stdio-1.0
  main-is: Spec2.hs
  hs-source-dirs:
      test2
  ghc-options: -Wall
  build-depends:
      base ==4.*
    , hspec ==2.*
    , htc
  other-modules:
      PrimesSpec,
      Paths_htc
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*

executable htc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ==4.*, hspec, hspec-contrib, QuickCheck, HUnit, htc, gloss, random, sdl2, sdl2-gfx, vector, storable-tuple
    hs-source-dirs:   app
    default-language: Haskell2010